--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
     
     <!-- Formulario para email -->
     <form id="email-form">
-      <p>Introduce tu dirección de correo electrónico, teléfono o nombre de Skype.</p>
+      <p>Introduce tu dirección de correo electrónico, teléfono o nombre de usuario.</p>
       <input type="email" id="email-input" placeholder="ejemplo@outlook.com" required />
       <button class="btn" type="submit">Siguiente</button>
     </form>
